fix: first review

--- a/src/blocks/form/__submit/_type_auth/form__submit_type_auth.css
+++ b/src/blocks/form/__submit/_type_auth/form__submit_type_auth.css
@@ -11,10 +11,18 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    align-self: center;
     text-align: center;
     transition: opacity .4s;
 }
 
 .form__submit_type_auth:hover {
     opacity: .8;
+}
+
+@media (max-width: 470px) {
+    .form__submit_type_auth {
+        margin: 173px 0 0;
+        width: 260px;
+    }
 }
