--- a/src/blocks/form/__title-auth/form__title-auth.css
+++ b/src/blocks/form/__title-auth/form__title-auth.css
@@ -7,3 +7,10 @@
     color: #fff;
     text-align: center;
 }
+
+@media (max-width: 470px) {
+    .form__title-auth {
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
